Post API fix and swagger
